---------------------------------------------------
Legend :	+=addition		*=change	!=bug	
---------------------------------------------------

V1.7.3
------
++ double clicking on pattern highlights that track (pooplog)


V1.7.1
------

+ Added option (not) to loop the Song/block at the end.
+ (NEEDS TESTING!)Added "mcm" option in the MidiInput dialog, to record midi commands directly.
! Crash bug when opening the minimixer when it had connected machines with a name of 15 letters.
! New default size not working with the keyboard shortcut of moving next (which adds a new pattern)
! Values not being shown when adding them at the last line of pattern, with wrap around disabled.
! Play block now does work correctly
! Fixed Saving to wav. options "save pattern" and "save sequence position" didn't ever stop.


V1.7RC6
-------

+ Tweak Slide command. Slides a Tweak to make it smoother.
+ Psycle now creates a log of the loaded plugins at start, to help you know which one made it crash, if any.
+ Implemented "Exchange" button in Gear Rack and added Instruments as well.
* Speeded up some of the internals thanks to Dan.
! Fixed the Crashes reported by people when opening the Settings dialog (Happened in Win9X systems
  with many fonts)
! Fixed a problem with Tweak recording with VST's with Native GUI.
! Fixed bug with some VST's not playing the first note.
! Fixed bug where a few VST's became monophonic after pressing play (Wrong MIDI command sent)
! Fixed Length (in time) counter error when FFxx or FExx values were present for Tweaks or mcm's


V1.7RC1
-------
+ added ASIO support through "PortAudio" library (in its version 18). (LegoStar)
+ revert to saved option (pooplog) [alk]
+ added "Save to wav..." (offline mode) so that you don't need to play all the song.
+ Added colour boxes to "Visual" configuration to show the actual configuration. (Updates when changing preset
  too)
+ You can drag songs onto the window to load them now (pooplog)